--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,8 @@
     padding: 0;
     font-family: border-box;
     box-sizing: border-box;
+    
+  
 }
 
 body{
@@ -13,6 +15,9 @@ body{
     display: flex;
     flex-direction: column;
     height:100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
 }
 
 nav
@@ -60,6 +65,7 @@ nav ul li a
 }
 
 
+
 .hero h1
 {
     width:400px;
@@ -70,11 +76,13 @@ nav ul li a
 
 .content
 {
-    width:100%;
     position: absolute;
     top:50%;
-    transform:translateY(-30%);
-    padding-left: 100px;
+    padding-left: 50px;
+    margin-left: 10%;
+    overflow-x: hidden;
+    
+
   
 }
 
@@ -83,6 +91,7 @@ nav ul li a
     margin-top: 10px;
     color: skyblue;
     font-weight: bold;
+    font-size: 64px;
 }
 
 .content h3{
